--- a/Laptop-2/my.cnf
+++ b/Laptop-2/my.cnf
@@ -1,22 +1,22 @@
 [mysqld]
 server-id = 2
 
-# Binary logging
+# Binary logging - REPLICA TODAS LAS BASES DE DATOS
 log_bin = /var/log/mysql/mysql-bin.log
 binlog_format = ROW
-binlog_do_db = mydata
 
 # Relay log
 relay-log = /var/log/mysql/mysql-relay-bin
 relay-log-index = /var/log/mysql/mysql-relay-bin.index
 
-# Prevención de conflictos (OFFSET = 2)
+# Prevent conflicts
 auto-increment-increment = 2
 auto-increment-offset = 2
 
-# Replicación
+# Replication
 log-slave-updates = 1
 replicate-same-server-id = 0
+skip-replica-start = 1
 
 # Network
 bind-address = 0.0.0.0
