--- a/Virtualbox-slave/my.cnf
+++ b/Virtualbox-slave/my.cnf
@@ -15,9 +15,12 @@ binlog_format = ROW
 gtid_mode = ON
 enforce_gtid_consistency = ON
 
-# Replicación paralela
+# Parallel replication
 slave_parallel_workers = 4
 slave_parallel_type = LOGICAL_CLOCK
+
+# Prevent auto start
+skip-replica-start = 1
 
 # Network
 bind-address = 0.0.0.0
