--- a/Laptop-1/my.cnf
+++ b/Laptop-1/my.cnf
@@ -4,19 +4,19 @@ server-id = 1
 # Binary logging
 log_bin = /var/log/mysql/mysql-bin.log
 binlog_format = ROW
-binlog_do_db = mydata
 
 # Relay log
 relay-log = /var/log/mysql/mysql-relay-bin
 relay-log-index = /var/log/mysql/mysql-relay-bin.index
 
-# Prevención de conflictos auto_increment
+# Prevent conflicts with ids
 auto-increment-increment = 2
 auto-increment-offset = 1
 
-# Replicación
+# Replication
 log-slave-updates = 1
 replicate-same-server-id = 0
+skip-replica-start = 1
 
 # Network
 bind-address = 0.0.0.0
