--- a/Laptop-1/proxysql.cnf
+++ b/Laptop-1/proxysql.cnf
@@ -20,6 +20,7 @@ mysql_variables = {
   monitor_connect_interval=60000
   monitor_ping_interval=10000
   monitor_read_only_interval=1500
+  monitor_replication_lag_interval=10000
   ping_interval_server_msec=120000
   ping_timeout_server=500
   commands_stats=true
