--- a/Virtualbox-slave/docker-compose.yml
+++ b/Virtualbox-slave/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       --enforce-gtid-consistency=ON
       --slave-parallel-workers=4
       --slave-parallel-type=LOGICAL_CLOCK
+      --skip-replica-start=1
       --bind-address=0.0.0.0
       --character-set-server=utf8mb4
       --collation-server=utf8mb4_unicode_ci
