--- a/Laptop-1/proxysql.cnf
+++ b/Laptop-1/proxysql.cnf
@@ -25,26 +25,27 @@ mysql_variables = {
   ping_timeout_server=500
   commands_stats=true
   sessions_sort=true
+  connect_timeout_server_max=10000
 }
 
 # Hostgroup 0 = Writers (ambos masters)
-# Hostgroup 1 = Readers (masters + slave VM)
+# Hostgroup 1 = Readers (masters + slave)
 mysql_servers = (
-  { address="mysql-master1", port=3306, hostgroup=0, max_connections=200, weight=1 },
-  { address="mysql-master1", port=3306, hostgroup=1, max_connections=200, weight=1 },
-  { address="100.87.129.54", port=3306, hostgroup=0, max_connections=200, weight=1 },
-  { address="100.87.129.54", port=3306, hostgroup=1, max_connections=200, weight=1 },
-  { address="100.118.138.49", port=3306, hostgroup=1, max_connections=200, weight=2, max_replication_lag=10 }
+  { address="mysql-master1", port=3306, hostgroup=0, max_connections=200, weight=1000 },
+  { address="mysql-master1", port=3306, hostgroup=1, max_connections=200, weight=100 },
+  { address="100.87.129.54", port=3306, hostgroup=0, max_connections=200, weight=1000 },
+  { address="100.87.129.54", port=3306, hostgroup=1, max_connections=200, weight=100 },
+  { address="100.118.138.49", port=3306, hostgroup=1, max_connections=200, weight=10000, max_replication_lag=10 }
 )
 
 mysql_users = (
   {
     username="app_user"
     password="app_password"
-    default_hostgroup=0
+    default_hostgroup=1
     active=1
     max_connections=1000
-    transaction_persistent=1
+    transaction_persistent=0
   }
 )
 
@@ -59,14 +60,28 @@ mysql_query_rules = (
   {
     rule_id=2
     active=1
-    match_digest="^(INSERT|UPDATE|DELETE|REPLACE|CREATE|ALTER|DROP|TRUNCATE)"
+    match_digest="^(INSERT|UPDATE|DELETE|REPLACE|CREATE|ALTER|DROP|TRUNCATE|START TRANSACTION|BEGIN|COMMIT|ROLLBACK)"
     destination_hostgroup=0
     apply=1
   },
   {
     rule_id=3
     active=1
+    match_digest="^(SHOW|DESCRIBE|DESC|EXPLAIN|USE)"
+    destination_hostgroup=1
+    apply=1
+  },
+  {
+    rule_id=4
+    active=1
     match_digest="^SELECT"
+    destination_hostgroup=1
+    apply=1
+  },
+  {
+    rule_id=5
+    active=1
+    match_digest="^SET"
     destination_hostgroup=1
     apply=1
   }
@@ -76,6 +91,6 @@ mysql_replication_hostgroups = (
   {
     writer_hostgroup=0
     reader_hostgroup=1
-    comment="Master-Slave replication"
+    comment="Master-Master + Slave replication"
   }
 )
